fix: about page overflow

--- a/themes/hello-friend-ng/assets/scss/_about.scss
+++ b/themes/hello-friend-ng/assets/scss/_about.scss
@@ -4,6 +4,7 @@ $mustard: #FFD320;
 $salmon: #F87B73;
 
 .about {
+  overflow-x: hidden;
   .presentation {
     display: flex;
     align-items: flex-start;
